# parnav_ins_sim

./: LICENSE  README.md  TUNING_PARAMETERS.md
ins_fgo/: .clang-tidy  CMakeLists.txt  CMakeUserPresets.json  README.md  build_project.sh  build_project_debug.sh  compile_commands.json  conanfile.txt  install_conan_packages.sh  install_conan_packages_debug.sh  setup_cmake.sh  setup_cmake_debug.sh
ins_fgo/.cache/clangd/index/: BleBeacon.cpp.D23AA9EB41F5F0C9.idx  BleBeacon.hpp.575F97951E446551.idx  FactorGraphOptimisation.cpp.A56696C3BB1DFD97.idx  FactorGraphOptimisation.hpp.444DA92226FD89DC.idx  FactorGraphOptimiser.cpp.C4A80851989D1560.idx  FactorGraphOptimiser.hpp.78223A893239864F.idx  GNSS.cpp.E9BDDFD05262DB6C.idx  GNSS.hpp.92B96C8B57C2E57A.idx  IMU.cpp.A2762DD1EA2BFD67.idx  IMU.hpp.F2F2924798C7401F.idx  Innovation.hpp.F1A019B43E7C8CEE.idx  OutlierRejection.cpp.319459F739DC05B7.idx  OutlierRejection.hpp.46EA6E95C65A1942.idx  PARS.cpp.F89DDD30E0E88E66.idx  PARS.hpp.DBA4FD99810EDCA4.idx  PARSAzimuthFactor.cpp.691D4F1F0DEDC6D7.idx  PARSAzimuthFactor.hpp.99CF64C8D34D4A19.idx  PARSElevationFactor.cpp.924056719DE02EF3.idx  PARSElevationFactor.hpp.1EC888F7B3E30194.idx  PARSRangeFactor.cpp.BF11C7A2D8C49FBF.idx  PARSRangeFactor.hpp.9958CB8FF78E7CA9.idx  RawSimulationData.cpp.60EF1E3F4903C48B.idx  SimulationData.cpp.5E992C3BD37D8A64.idx  SimulationData.hpp.BBCFBDFCFA8392FA.idx  Types.hpp.8333C5486D7251EA.idx  main.cpp.EDE210DD9005268A.idx  standstill_four_locators_PARS_angular.cpp.EB7EEB2736F077EA.idx  standstill_four_locators_range_only.cpp.CDECFEDD5A03A68F.idx  standstill_one_locator_four_gnss.cpp.47D9FD0C05623CFE.idx  standstill_one_locator_full_pars.cpp.1F35C570AF07413E.idx  utils.cpp.3F35E904D31998FE.idx  utils.hpp.3209D57A38820AFF.idx  utils_test.cpp.A105A13D3E6BC9B3.idx
ins_fgo/src/: FactorGraphOptimiser.cpp  FactorGraphOptimiser.hpp  GNSS.cpp  GNSS.hpp  IMU.cpp  IMU.hpp  OutlierRejection.cpp  OutlierRejection.hpp  PARS.cpp  PARS.hpp  PARSAzimuthFactor.cpp  PARSAzimuthFactor.hpp  PARSElevationFactor.cpp  PARSElevationFactor.hpp  PARSRangeFactor.cpp  PARSRangeFactor.hpp  RawSimulationData.cpp  Types.hpp  main.cpp  standstill_four_locators_PARS_angular.cpp  standstill_four_locators_range_only.cpp  standstill_one_locator_four_gnss.cpp  standstill_one_locator_full_pars.cpp  utils.cpp  utils.hpp
ins_fgo/src/tests/: utils_test.cpp
ins_mekf/: BLEPARS.m  GNSS.m  IMU.m  INSMEKFSimulator.m  MEKF.m  SecondOrderGaussMarkov.m  SensorFaultSimulator.m  SensorReadingFault.m  calc_Phi_and_Qd_using_van_Loan.m  exOtterMSS.m  fogm.m  generate_otter_trajectory.m  generate_simulation_data.m  generate_stand_still.m  generate_trajectory.m  read_cpp_data.m  run.m
plotting/: compute_INS_RMSE.m  compute_rmse.m  generate_rmse_table.m  get_data_files_for_run.m  parse_cpp_data_file.m  plot_INS_error_3sigma.m  plot_INS_error_3sigma_substate.m  plot_cca_analysis_between_substates.m  plot_cca_for_all_substate_pairs.m  plot_ee_3sigma.m  plot_mean_ee_3sigma.m  plot_results.m
